--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.aws-github-oidc-iam-role }}
+          role-to-assume: ${{ secrets.AWS_OIDC }}
           role-session-name: LambdaDeploymentSession
           aws-region: ${{ env.AWS_REGION }}
 
