--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -341,7 +341,7 @@ jobs:
                   <div class="findings-section">
                       <h2 class="findings-header"> Priority Security Issues (Top {len(priority_findings)})</h2>
                       <div class="findings-content">
-                          {priority_findings_html if priority_findings else '<p style="text-align: center; color: #28a745; font-size: 16px;">🎉 No critical security issues detected!</p>'}
+                          {priority_findings_html if priority_findings else '<p style="text-align: center; color: #28a745; font-size: 16px;"> No critical security issues detected!</p>'}
                       </div>
                   </div>
                   
@@ -405,7 +405,7 @@ jobs:
                   # 1. Discover EC2 instances
                   ec2_ids = _discover_running_instances()
                   if not ec2_ids:
-                      print("ℹ︎ No EC2 instances found")
+                      print(" No EC2 instances found")
                       return {"statusCode": 204, "body": "No instances to scan"}
 
                   # 2. Create Inspector scan and generate PDF
@@ -444,7 +444,7 @@ jobs:
           echo " Deploying Lambda function..."
           
           if aws lambda get-function --function-name $FUNCTION_NAME 2>/dev/null; then
-            echo "🔄 Updating existing function..."
+            echo " Updating existing function..."
             
             aws lambda update-function-code \
               --function-name $FUNCTION_NAME \
@@ -463,7 +463,7 @@ jobs:
             
             echo " Function updated"
           else
-            echo "🆕 Creating new function..."
+            echo " Creating new function..."
             
             aws lambda create-function \
               --function-name $FUNCTION_NAME \
@@ -489,7 +489,7 @@ jobs:
           
           # Check if rule already exists
           if aws events describe-rule --name $SCHEDULE_NAME 2>/dev/null; then
-            echo "ℹ︎ Quarterly schedule already exists: $SCHEDULE_NAME"
+            echo " Quarterly schedule already exists: $SCHEDULE_NAME"
           else
             echo " Creating quarterly schedule (auto-enabled)..."
             
@@ -524,15 +524,15 @@ jobs:
 
       - name: Test Lambda Function
         run: |
-          echo "🧪 Testing Lambda function..."
+          echo " Testing Lambda function..."
           
           aws lambda invoke \
             --function-name inspector-ec2-scanner \
             --payload '{}' \
             response.json
           
-          echo "✅ Test invocation sent (async)"
-          echo "📊 Check CloudWatch logs: aws logs tail /aws/lambda/inspector-ec2-scanner --follow"
+          echo " Test invocation sent (async)"
+          echo " Check CloudWatch logs: aws logs tail /aws/lambda/inspector-ec2-scanner --follow"
 
       - name: Upload Deployment Artifacts
         uses: actions/upload-artifact@v4
