--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -429,6 +429,7 @@ jobs:
               """Upload PDF report and send comprehensive notification."""
               # Upload to S3
               try:
+                  s3_client = boto3.client('s3')
 
                   year_month = datetime.now(timezone.utc).strftime('%Y-%m')
                   s3_key = f"security-reports/{ENVIRONMENT_FILTER}/{year_month}/inspector-assessment.pdf"
